--- a/youssif/css/style.css
+++ b/youssif/css/style.css
@@ -1,33 +1,21 @@
-body{
-    background: #444444;
 
-    
-}
-#loginBtn{
-    transition:  0.3s;
-    padding: 0px;
-    
-    border: 2px solid greenyellow;
-    border-radius: 50px;
-    text-align: center;
-    padding: 3px 30px 5px 30px
-    
 
-  
-}
-#loginBtn:hover{
-    background: #4BFF3C;
-    color: #444444
-}
 .carousel-inner img{
     width: 100%;
     
 }
 
-.carousel-inner{
+
+#description {
+    margin-top: 50px;
+    background: linear-gradient(to right bottom, #f0c27b, #4b1248);
+    padding-top: 30px;
+    padding-bottom: 30px;
+    transition: 0.4s;
+}
+
+.carousel-inner {
 width: 100%;
-
-
 }
 .card{
     height: 150px;
@@ -35,11 +23,13 @@ width: 100%;
     
 }
 .card i {
-    font-size: 23px 
+    font-size: 23px;
+    margin-top:10px;
 }
 .card span {
     font-size: 23px;
     font-weight: 500;
+    margin-top: 2px;
     
 }
 #consoles{
@@ -67,22 +57,8 @@ width: 100%;
     /*margin: 2px 20px*/
     
 }
-footer  a{
-color: greenyellow
-}
-footer p {
-    color: #E0E0E0;
-}
-.any{
-    width: 30px;
-    height: 30px;
-    border-radius: 30px;
-    padding-top: 3px;
-    transition: 0.5s
-}
-.any:hover{
-    background: greenyellow
-}
+
+
 /*
 #loginBtn::before{
     content:'';
@@ -103,48 +79,9 @@ footer p {
     border-bottom: white solid 1.5px 
 }
 */
-nav{
-    background-color: rgb(0,0,0,0.1); /* Fallback color */ 
-    position: relative;
-    height: 100px;
-    margin-bottom: 10px; 
-     
-    transition: 0.5s
-    
-}
-nav ul{
-    
-    height: 50px;
-    width: 100%;
-    margin-top: 10px
-   
-}
-nav::after{
-  position: absolute;
-  content: "";
-  height: 1px;
-  bottom: -5px;
-  left: 1%;
-  width: 0px;
-  transition:   0.9s;
-  background: white
-  
-}
-nav:hover::after{
-    width: 98%
-    
-}
-nav:hover{
-    background-color: rgb(0,0,0,0.6); 
-}
-nav::before{
-    position: absolute;
-    content: "";
-    width: 98%;
-    height: 1px;
-    bottom: -5px;
-    left: 1%;
-    background:#A841A5;
-
-    
+@media(max-width : 766px){
+    #description{
+        padding-bottom: 0px;
+        background: linear-gradient(to left top, #ff4e50, #f9d423);
+    }
 }
