--- a/khaled/css/style.css
+++ b/khaled/css/style.css
@@ -97,6 +97,11 @@
   #Simg {
     width: 357px;
   }
+  #backHomeButton i{
+    font-size: 40px;
+    border-radius: 50px;
+    padding-top: 1px;
+  }
 }
 @media only screen and (min-width: 401px) and (max-width: 960px) {
   #Simg {
