--- a/youssif/css/style.css
+++ b/youssif/css/style.css
@@ -18,18 +18,18 @@
 width: 100%;
 }
 .card{
-    height: 150px;
+    height: 180px;
     margin-top: 20px;
     
 }
 .card i {
     font-size: 23px;
-    margin-top:10px;
+    margin-top:30px;
 }
 .card span {
     font-size: 23px;
     font-weight: 500;
-    margin-top: 2px;
+    margin-top: 18px;
     
 }
 #consoles{
@@ -83,5 +83,8 @@ width: 100%;
     #description{
         padding-bottom: 0px;
         background: linear-gradient(to left top, #ff4e50, #f9d423);
+    }
+    .text-description{
+        margin-left: 6px ;
     }
 }
