--- a/youssif/css/style.css
+++ b/youssif/css/style.css
@@ -2,7 +2,11 @@
 
 .carousel-inner img{
     width: 100%;
-    
+    height: 100%;
+}
+.carousel-inner{
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -52,13 +56,32 @@ width: 100%;
 
 #picker button{
     color: whitesmoke;
-    background-image: linear-gradient(140deg,#FCAB13 -1% ,#A951EB 100% );
+    /*background-image: linear-gradient(140deg,#FCAB13 -1% ,#A951EB 100% );*/
+    background: none;
+    position: relative;
+    transform-style: preserve-3d;
     width: 100%;
-    margin: 5px 0px
+    margin: 5px 0px;
+    overflow: hidden;
     /*margin: 2px 20px*/
     
 }
-.carousel{
+#picker button::before{
+    content:"";
+    position:absolute;
+    top:0;
+    right:0;
+    width:170%;
+    height:100%;
+    background:linear-gradient(140deg,#FCAB13 50% ,#A951EB 100% );;
+    z-index: -1; /* eh da ?*/
+    transition:  0.4s;
+  
+  }
+#picker button:hover::before{
+    transform: translateX(80px) ;
+  }
+#demo{
     position: relative;
 }
 .navbar-brand{
@@ -70,9 +93,16 @@ width: 100%;
     width: 280px;
   
 }
+#demo h1{
+    background: linear-gradient(140deg, #ff2600 40%, #2f00ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    font-family: Arial, Helvetica, sans-serif;
 
+
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
 .hot-news{
-    width: 180px;
+    width: 250px;
     margin: 10px ;
     overflow: hidden;
     border-radius: 6px;
@@ -80,12 +110,52 @@ width: 100%;
 }
 .hot-news img{
     width: 100%;
-    height: 110px;
+    height: 160px;
     transition: 0.8s;
 }
 .hot-news:hover img{
     transform: scale(1.2);
 }
+#news-feed{
+    z-index: 2;
+    margin-top: 150px ;
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
+    width: 80%;
+    text-align: center;
+    
+}
+/*      mood 1
+.carousel-indicators li {
+    width: 15px;
+  height:15px;
+  border-radius: 100%;
+    background-image: linear-gradient(140deg, #ff00cc 40%, #333399 );
+margin-left: 10px;
+margin-right:10px ;
+    transition: 0.5s;
+    border:none;
+  }
+
+
+  .carousel-indicators li:hover {
+    width: 20px;
+    height: 20px;
+  }
+  */
+
+/*    mood 2 */
+.carousel-indicators li {
+  width: 70px;
+  height:5px;
+  border-radius:50px;
+  background-image: linear-gradient(140deg, #11998e, #38ef7d);   
+  margin-left: 10px;
+  margin-right:10px ;
+  transition: 0.5s;
+  border:none;
+  }
 
 
 /*
@@ -108,7 +178,78 @@ width: 100%;
     border-bottom: white solid 1.5px 
 }
 */
+.contant{
+ 
+ width: 100%;
+ height: 600px;
+ padding: 150px 0px 0px 3%;
+ position: relative;
+ 
+ background: url(https://vignette.wikia.nocookie.net/callofduty/images/7/76/Game_cover_art_BOIII.jpg/revision/latest?cb=20160211194000) no-repeat center center ;
+}
+.contant > p{
+    width: 90%;
+}
+.contant hr{
+    width: 300px;
+    float: left;
+}
+.sub-contant .btn-success{
+    width: 60%;
+    display: block;
+    border-radius: 15px;
+}
+.contant p{
+    color: white;
+}
+.sub-contant{
+    background: rgb(0,0,0,0.7);
+    visibility: hidden;
+    position: absolute;
+    
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    padding: 150px 0px 0px 3%;
+    transition: 0.7s;
+}
+.contant:hover .sub-contant{
+    visibility: visible;
+    padding: 100px 0px 0px 3%; 
+    
+}
+.sub-contant p {
+    width: 90%;
+    margin-top: 35px;
+    visibility: hidden;
+    transition: 0.6s;
+}
+.sub-contant:hover p {
+    visibility: visible;
+    margin-top: 7px;
+
+}
+#demo2{
+    height: 600px;
+}
+#demo2 img{
+    height: 100%;
+    width: 100%;
+
+}
+
+@media(max-width : 1516px){
+    #news-feed{
+        margin-top: 0;
+        
+    }
+}
 @media(max-width : 766px){
+    #news-feed{
+        margin-top: 4%;
+        
+    }
     #description{
         padding-bottom: 0px;
         background: linear-gradient(to left top, #ff4e50, #f9d423);
@@ -117,15 +258,26 @@ width: 100%;
         margin-left: 6px ;
     }
 }
-@media(max-width : 750px){
+@media(max-width : 973px){
     .hot-news{
-        width: 30%;
+        width: 27%;
         margin: 5px ;
     }
     .hot-news img{
         height: 100%;
     }
 }
+@media(max-width : 450px){
+    .hot-news{
+     
+     width: 90px;
+    }
+    .carousel-indicators li {
+        width: 40px;
+        height:2px;
+    }
+}
+
 
 @media(max-width : 375px){
     .hot-news{
@@ -137,10 +289,17 @@ width: 100%;
     }
 }
 
-@media(max-width : 815px){
+@media(max-width : 964px){
  .carousel h1, hr{
      display: none;
 
  }
 }
+
+
+
+
+ 
+ 
+
 
