--- a/khaled/css/style.css
+++ b/khaled/css/style.css
@@ -415,6 +415,9 @@ body {
     background: #111;
     cursor: pointer;
     position: relative;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
+  
     z-index: 0;
     border-radius: 10px;
 }
