--- a/khaled/css/style.css
+++ b/khaled/css/style.css
@@ -68,11 +68,7 @@
 
 body{
     
-    margin: 0;
-    padding: 0;
-    
-    justify-content: center;
-    align-items: center;
+   
     
     
 }
@@ -393,19 +389,16 @@ body{
   transform: rotateY(180deg);
 }
 /********************************************************************/
-html,
+/*
 body {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100vh;
-  
     flex-direction: row;
     justify-content: center;
     align-items: center;
     background: #000;
 }
-
+*/
 .glow-on-hover {
     width: 220px;
     height: 50px;
