--- a/youssif/css/productStyle.css
+++ b/youssif/css/productStyle.css
@@ -10,9 +10,10 @@ body{
     margin:10px 20px ;
 }
 
-p , h2, label{
+p ,h2, h4, label{
     color: white;
 }
+
 
 .img-fluid{
 
@@ -78,14 +79,22 @@ input[type=range]::-webkit-slider-runnable-track {
 
   .info{
       background: #2A2A2A;
+      padding: 50px;
+     
   }
+  
   .info div{
-      float: left;
+      float: left;  
   }
 .info div *{
       float: left;
       clear: both;
     }
+ #firstInfo div{
+
+    width: 49%;
+ }   
+
 .info h6,h5{
     color: #727272;
   }
@@ -94,13 +103,22 @@ input[type=range]::-webkit-slider-runnable-track {
       float: left;
 }
 
- .info p{
+.info p{
      margin-bottom: 30px;
-     width: 300px;
+     width: 70%;
  } 
-
- .info-card{
+.info-card{
      margin: 17px;
+     width: 200px;  
+ }
+#info-card-container{
+    padding: 0px;
+    margin: 0px;
+    width: 800px;
+    margin: 20px auto;
+ }
+#info-card-container i{
+     font-size: 40px;
  }
 .info hr{
     width: 90%;
@@ -112,10 +130,82 @@ input[type=range]::-webkit-slider-runnable-track {
     color: white;
 }
 #lastInfo i{
-margin-top: 7px;
-margin-right: 5px;
+margin-top: 8px;
+ margin-right:10px ;
 }
 #lastInfo div{
-    margin: 35px;
+    margin-right: 50px;   
+}
+#follow-us{
+    font-size: 25px;
+    background: #2A2A2A;
+}
+#follow-us a{
+    margin:30px;
+    color: white;
+}
+
+#follow-con{
+width: 400px; margin: 0px auto;
+}
+
+
+
+@media(max-width:423px){
+    .info div{
+        float: none;
+      
+    }
+    #firstInfo div{
+        width: 100%;
+    }
+    .info p{
+        width: 100%;
+    } 
+    .info hr{
+        width: 100%;
+    
+    }
+}
+@media(max-width:407px){
+    #lastInfo div{
+        margin-right: 0px;    
+        display: block;
+        font-size: 22px;
+        margin: 20px auto;
+        width: fit-content;
+    }
+  
+}
+@media(max-width:380px){
+    #follow-us-panle{
+        padding: 0px;
+    }
+    #follow-us a{
+        margin:30px 29px;
+        font-size: 23px;
+    }
+    #follow-con{
+        width: 350px;
+    }
     
 }
+@media(max-width:750px){
+    .info-card{
+        margin: 17px;
+        width: 30%;
+        margin-left: 40px ;
+    }
+    .info-card h5{
+        font-size: 14.9px;
+    }
+    .info-card p{
+        font-size: 13px;
+    }
+
+   #info-card-container{
+       width: 100%;
+    }
+   
+}
+
