--- a/youssif/css/productStyle.css
+++ b/youssif/css/productStyle.css
@@ -15,7 +15,7 @@ p ,h2, h4, label{
 }
 
 
-.img-fluid{
+#game-img{
 
     border: 1.5px solid white;
     padding: 10px;
@@ -141,14 +141,74 @@ margin-top: 8px;
     background: #2A2A2A;
 }
 #follow-us a{
-    margin:30px;
+    margin: 10px 20px;
     color: white;
+    transition: 0.3s;
 }
+#follow-us a:hover{
+    transform: translateY(-5px);
+    
+    
+}
+
 
 #follow-con{
-width: 400px; margin: 0px auto;
+width: 330px; margin: 0px auto;
+}
+#seson-pass{
+    padding: 0px;
+    background: #2A2A2A;
+    margin-bottom: 50px;
+}
+#seson-pass div:first-child ,  #desc {
+float: left;
+
+
+}
+#seson-pass img{
+    width: 250px;
+    height: 170px;
+}
+#desc{
+    padding-left: 30px ;
+    width: 65%; 
+    margin-bottom: 6px;
+}
+#seson-pass-bottom{
+    
+    direction: rtl;
+    width: 100%;
+}
+#seson-pass-bottom{
+    clear: both;
+  background: yellow;
+    width: 100%;
+    color: white;
+    
+}
+#seson-pass-bottom *{
+    float: right;
 }
 
+#seson-pass-bottom button{
+    width: 150px;
+    height: 50px;
+    margin: 5px;
+    border-radius: 0px;
+}
+
+
+@media(max-width:992px){
+    #desc{
+        width: 100%;
+        
+    }
+    #seson-pass img{
+        width: 100%;
+        height: 100%;
+     
+    }
+}
 
 
 @media(max-width:423px){
@@ -158,6 +218,7 @@ width: 400px; margin: 0px auto;
     }
     #firstInfo div{
         width: 100%;
+       
     }
     .info p{
         width: 100%;
@@ -174,6 +235,17 @@ width: 400px; margin: 0px auto;
         font-size: 22px;
         margin: 20px auto;
         width: fit-content;
+    }
+    #seson-pass-bottom div *{
+        font-size: 12px;
+        float: left;
+
+    }
+    #seson-pass-bottom div{
+        width: 50%;
+    }
+    #seson-pass-bottom div p{
+        width: 100%;
     }
   
 }
