--- a/youssif/css/signupStyle.css
+++ b/youssif/css/signupStyle.css
@@ -55,6 +55,7 @@ form div:last-child{
 form{
     background: white;
     padding: 10px;
+   
     height: 550px;
     position: relative;
     border-radius: 12px;
@@ -65,6 +66,14 @@ form{
 .right{
     left: 101%;
     
+}
+@media(max-width: 360px){
+    .form-group{
+        padding: 0px 10px;
+    }
+    .form-check{
+        padding: 2px 35px;
+    }
 }
 
 
