--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,9 +75,7 @@
 
                 </div>
                 <div class="carousel-item active">
-                    <video style="width: 100% ;height: 100%;" autoplay muted>
-          <source src="../assets/img/First Look at Nintendo Switch.mp4" type="video/mp4">
-        </video>
+				                    <img src="../assets/img/firstlook.gif" alt="Los Angeles">
                 </div>
                 <div class="carousel-item ">
                     <img src="../assets/img/heli.jpg" alt="New York">
