--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,17 @@
 
 
     <%- include("parts/header")%>
+	<div class="container-fluid">
+    <div class="row justify-content-center" id="picker">
+
+        <div class="col-md-3 col-sm-4 col-xs-1"><button type="button" class="btn btn-outline-dark"><i
+            class="fab fa-xbox"></i> XBOX</button></div>
+        <div class="col-md-3 col-sm-4 col-xs-1"><button type="button" class="btn btn-outline-dark"><i
+            class="fab fa-playstation"></i> PLAYSTATION</button></div>
+        <div class="col-md-3 col-sm-4 col-xs-1"><button type="button" class="btn btn-outline-dark">PC</button></div>
+
+    </div>
+</div>
         <div id="demo" class="carousel slide" data-ride="carousel">
 
             <div class="continer" id="news-feed">
