--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -27,7 +27,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6 col-sm-7 col-xs-12" id="con">
                     <div id="motion" class="right"></div>
-                    <form id="loginForm">
+                    <form action="signin" id="loginForm" method="POST">
                         <div><button id="toSignup" style="border-radius: 20px; padding-left: 6px ;" type="button" class="btn btn-outline-dark"><i class="fas fa-chevron-left"></i> Sign up</button></div>
                         <div class="follow_us" style="margin: 20px 0px 80px 0px ;">
                             <button type="button" class="btn btn-outline-dark">  <i class="fab fa-facebook"></i></button>
@@ -40,7 +40,7 @@
                         </div>
                         <div class="form-group">
                             <label for="pwd">Password:</label>
-                            <input type="password" class="form-control" id="pwd" name="loginpasword">
+                            <input type="password" class="form-control" id="pwd" name="loginpassword">
                         </div>
                         <div class="form-group form-check">
                             <label class="form-check-label">
