--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -46,8 +46,9 @@
                             <label class="form-check-label">
                             <input class="form-check-input" type="checkbox"> Remember me
                           </label>
+                            <span name="error" style="color: red;"></span>
                         </div>
-                        <div id="submitBtn" style="text-align: center;"><button type="submit" class="btn btn-primary">Submit</button></div>
+                        <div id="submitBtn" style="text-align: center;"><button type="submit" class="btn btn-primary" id="btlogin">Submit</button></div>
 
                     </form>
 
