--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Signup/signin</title>
     <link rel="stylesheet" href="../assets/css/layoutStyle.css">
     <link rel="stylesheet" href="../assets/css/signupStyle.css">
     <style>
@@ -42,11 +42,11 @@
                             <label for="pwd">Password:</label>
                             <input type="password" class="form-control" id="pwd" name="loginpassword">
                         </div>
-                        <div class="form-group form-check">
+                        <div class="form-group form-check" id="cccc">
                             <label class="form-check-label">
                             <input class="form-check-input" type="checkbox"> Remember me
                           </label>
-                            <span name="error" style="color: red;"></span>
+
                         </div>
                         <div id="submitBtn" style="text-align: center;"><button type="submit" class="btn btn-primary" id="btlogin">Submit</button></div>
 
