--- a/views/about.ejs
+++ b/views/about.ejs
@@ -209,7 +209,7 @@
             </div>
         </section>
         <%- include("parts/footer")%>
-
+<%- include('parts/chat')%>
 </body>
 
 </html>
