--- a/views/index.ejs
+++ b/views/index.ejs
@@ -259,6 +259,8 @@
                 </div>
             </div>
             <%- include('parts/footer')%>
+			<%- include('parts/chat')%>
+
 
 </body>
 
