--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -15,7 +15,7 @@
                 <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item items">
-                <a class="nav-link" href="../games">Games</a>
+                <a class="nav-link" href="../product">Games</a>
             </li>
 
             <li class="nav-item items">
