--- a/views/products.ejs
+++ b/views/products.ejs
@@ -203,7 +203,7 @@
                     </div>
                 </div>
 
-
+<%- include('parts/chat')%>
                 <%- include("parts/footer")%>
 
 </body>
