--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -23,6 +23,7 @@
 
 <body>
     <%- include("parts/header")%>
+	
         <div class="container-fluid" style="margin-top: 50px;">
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6 col-sm-7 col-xs-12" id="con">
@@ -89,6 +90,7 @@
 
             </div>
         </div>
+		<%- include('parts/chat')%>
         <script src="../assets/javascripts/validation.js"></script>
         <script>
             var toLogin = document.getElementById("toLogin")
